tests/ui/main_macro/pass/thread_count.rs
use chronographer::main;


#[main(thread_count=6)]
async fn main(sched: MyScheduler) {}